--- a/Index.html
+++ b/Index.html
@@ -1,4 +1,6 @@
-<html>
+<!DOCTYPE html>
+
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -11,6 +13,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
+
+    <!-- font awesome cdn link  -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
         <title>Ryan Bannout</title>
         
@@ -45,14 +50,16 @@
         <div class="content">
             <h3>hello, i am ryan bannout</h3>
             <span>front-end developer</span>
-            <p></p>
-            <a href="" class="btn">about me <i class="fas fa-user"></i></a>
+            <p>a self taught web developer</p>
+            <a href="#about" class="btn">about me <i class="fas fa-user"></i></a>
         </div>
+
     </section>
 
     <!-- about section -->
 
     <!-- contact section -->
     
+
 </body>
 </html>
